[SUREFIRE-1869] Replace deprecated File.toURL() by File.toURI().toURL()
File.toURL() - does not automatically escape illegal characters